Fix minor layout issue

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -17,6 +17,7 @@ body {
 	color: #333;
 	margin: 0;
 	padding: 0;
+	padding-top: 5px;
 }
 
 pre {
@@ -75,7 +76,7 @@ pre {
 }
 
 #logged_in_user {
-	padding-bottom: 7px;
+	padding-bottom: 10px;
 }
 
 #notice {
